--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,8 @@
     "action": {
       "default_popup": "popup/EULA.html"
     },
-    "permissions": ["storage"],
-    "content_scripts" : [{
-      "matches" : ["<all_urls>"],
-      "js" : ["/text_extraction/links.js"],
-      "run_at" : "document_end"
-
-          }]
+    "permissions": ["storage", "activeTab", "scripting"],
+    "background" : {
+      "service_worker": "/scripts/background.js"
+    }
 }
