--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,12 @@
     "permissions": ["storage", "activeTab", "scripting"],
     "background" : {
       "service_worker": "/scripts/background.js"
-    }
+    },
+    "content_scripts": [
+   {
+     "matches": ["<all_urls>"],
+     "js": ["/scripts/content.js"],
+     "type": "module"
+   }
+ ]
 }
