--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,10 @@
       "activeTab",
       "scripting"
     ],
+    "content_scripts" : [{
+      "matches": ["<all_urls>"],
+      "js": ["/scripts/content.js"]
+    }],
     "background" : {
       "service_worker": "/scripts/background.js"
     },
