--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
     },
     "web_accessible_resources": [
       {
-        "resources": ["resources/*"],
+        "resources": ["resources/*", "popup/styles/popup.css"],
         "matches": ["<all_urls>"]
       }
     ]
