--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     ],
     "content_scripts" : [{
       "matches": ["<all_urls>"],
-      "js": ["lib/d3.v7.min.js", "lib/create_arc.js", "/scripts/content.js"]
+      "js": ["lib/d3.v7.min.js", "lib/create_arc.js", "/scripts/content.js", "/scripts/getllmresults.js", "/scripts/analysis.js","/text_extraction/filter.js", "/text_extraction/llmparse.js", "scripts/score-multiplier.js"]
     }],
     "background" : {
       "service_worker": "/scripts/background.js"
